--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
+    "scrollreveal": "^3.3.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
